@@ -22,6 +22,7 @@ CSOURCES = ares__close_sockets.c	\
   ares_parse_aaaa_reply.c		\
   ares_parse_ns_reply.c			\
   ares_parse_ptr_reply.c		\
+  ares_parse_srv_reply.c		\
   ares_process.c			\
   ares_query.c				\
   ares_search.c				\
